--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 click==7.1.1
+dominate==2.5.1
 Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+visitor==0.1.3
 Werkzeug==1.0.0
+WTForms==2.2.1
