--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/
 data_models/*.tsv
 data_models/*.csv
 data_models/*.zip
+data_models/raw_data/*.zip
+data_models/raw_data/*.tsv
+data_models/raw_data/*.csv
