--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 click==7.1.1
+cycler==0.10.0
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.0.3
+numpy==1.18.3
+pandas==0.24.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2019.3
+scipy==1.4.1
+seaborn==0.9.1
+six==1.14.0
 visitor==0.1.3
 Werkzeug==1.0.0
 WTForms==2.2.1
