--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.1
+joblib==0.14.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.0.3
@@ -14,6 +15,7 @@ pandas==0.24.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2019.3
+scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.9.1
 six==1.14.0
