--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 autoenv==1.0.0
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -6,6 +7,8 @@ cycler==0.10.0
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.9
@@ -13,6 +16,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 joblib==0.14.1
 kiwisolver==1.1.0
+Mako==1.1.3
 MarkupSafe==1.1.1
 matplotlib==3.0.3
 nltk==3.5
@@ -20,6 +24,7 @@ numpy==1.18.3
 pandas==0.24.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 regex==2020.4.4
 requests==2.23.0
@@ -27,6 +32,7 @@ scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.9.1
 six==1.14.0
+SQLAlchemy==1.3.18
 tqdm==4.45.0
 urllib3==1.25.9
 visitor==0.1.3
