--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
