--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ matplotlib==3.0.3
 nltk==3.5
 numpy==1.18.3
 pandas==0.24.2
+psycopg2==2.8
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
