--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,10 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
+redis==3.4.1
 regex==2020.4.4
 requests==2.23.0
+rq==1.2.2
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.9.1
