--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ data_models/raw_data/*.zip
 data_models/raw_data/*.tsv
 data_models/raw_data/*.csv
 data_models/raw_data
-ml_code/output/
+ml_code/output/*.pkl
+*.rdb
